--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
         <div id="todo-list">
             <!-- gerado pelo javascript -->
         </div>
-
     </div>
+
+<div class="github">
+    <i class="fab fa-github"></i>
+    <p><a href="https://github.com/justRenzinza">justRenzinza</a></p>
+</div>
+
+
 </body>
 </html>
